<resources>
    <string name="app_name">AndroidProjet</string>
    <string name="but_main_menu_1">Personnage</string>
    <string name="stat_PV">PV :</string>
    <string name="stat_vitesse">Vitesse :</string>
    <string name="stat_force">Force :</string>
    <string name="stat_precision">Précision :</string>
    <string name="ok">OK</string>
    <string name="retour">Retour</string>
    <string name="last_connexion_1">Derniere connexion : il y a</string>
    <string name="zero">0</string>
    <string name="un">1</string>
    <string name="falling">Falling</string>
    <string name="text_experience">Exp</string>
    <string name="reglages">Réglages</string>
    <string name="propos">À propos</string>
    <string name="desc_image_perso">Image personnage</string>
    <string name="accueil">Accueil</string>
    <string name="niv">Niv:</string>
    <string name="bonjour">Bonjour !</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_2">2</string>
    <string name="boss">Boss</string>
    <string name="cr_ateurs">Créateurs :</string>
    <string name="r_mi_bommelaere">Rémi Bommelaere</string>
    <string name="laurent_genty">Laurent Genty</string>
    <string name="luis_palluel">Luis Palluel</string>
    <string name="choix_du_personnage">Choix du personnage</string>
    <string name="mini_jeux">Mini-jeux</string>
    <string name="boss_1">Boss 1</string>
    <string name="dps">DPS :</string>
    <string name="dps_value">0</string>
    <string name="hp">PV</string>
    <string name="_0">0</string>
    <string name="boss1">Boss 1</string>
    <string name="d_part">Départ</string>
    <string name="abandonner">Abandonner</string>
    <string name="success">success</string>
    <string name="game_rapport">Nothing to say</string>
    <string name="bienvenue">Bienvenue sur notre application</string>
    <string name="son">Son </string>
    <string name="language">Language </string>
    <string name="temps_restant">Temps restant :</string>
    <string name="time_left_cpt">0</string>
    <string name="pas">Pas :</string>
    <string name="zeroo">0</string>
</resources>
