<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="uqac.dim.androidprojet.Boss">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#dbdbdb"
            android:minHeight="50sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boss"
                android:textSize="20sp"
                android:layout_centerInParent="true"
                android:gravity="center"/>

        </RelativeLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/boss"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30sp" />

        <ProgressBar android:id="@+id/life_boss_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:layout_marginLeft="10sp"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:progressBackgroundTint="@android:color/holo_red_dark"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:id="@+id/life_boss_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hp"
                android:textSize="30sp"/>
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dps"
                    android:textSize="30sp"/>
                <TextView
                    android:id="@+id/dps_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dps_value"
                    android:textSize="30sp"/>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d_part"
                    android:onClick="start_fight"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abandonner"
                    android:onClick="close_boss"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temps_restant"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/time_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_left_cpt"
                    android:textSize="20sp"/>

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>

</android.support.constraint.ConstraintLayout>