<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/but_main_menu_1"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:onClick="show_statistiques"
                android:text="@string/but_main_menu_1" />

            <Space
                android:layout_width="40dp"
                android:layout_height="1dp" />

            <Button
                android:id="@+id/but_main_menu_2"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:onClick="show_mini_jeu"
                android:text="@string/mini_jeux" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/but_main_menu_3"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:onClick="show_choixPersonnage"
                android:text="@string/choix_du_personnage" />

            <Space
                android:layout_width="40dp"
                android:layout_height="1dp" />

            <Button
                android:id="@+id/but_main_menu_4"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/boss"
                android:onClick="show_menu_boss"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/but_main_menu_5"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/reglages"
                android:onClick="show_reglages"/>

            <Space
                android:layout_width="40dp"
                android:layout_height="1dp" />

            <Button
                android:id="@+id/but_main_menu_6"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:onClick="show_Apropos"
                android:text="@string/propos" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>