<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bonjour"
            android:textSize="30sp"
            android:textColor="@android:color/holo_red_light"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView android:id="@+id/last_connexion_text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_connexion_1"
                />

            <Space android:id="@+id/space_last_connexion"
                android:layout_width="3dp"
                android:layout_height="wrap_content"/>

            <TextView android:id="@+id/last_connexion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView android:id="@+id/exp_gagne_co"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Expérience gagnée :"
                />

            <Space android:id="@+id/space_exp_gagnee"
                android:layout_width="3dp"
                android:layout_height="wrap_content" />

            <TextView android:id="@+id/exp_gagne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pas"
                />

            <Space android:layout_width="3dp"
                android:layout_height="wrap_content" />

            <TextView android:id="@+id/nb_pas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zeroo"
                />

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>