<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="uqac.dim.androidprojet.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="2">

            <TextView android:id="@+id/text_pv"
                android:text="@string/stat_PV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_margin="25dp"
                android:layout_marginBottom="10dp"
                android:textSize="25sp"/>

            <TextView android:id="@+id/text_vitesse"
                android:text="@string/stat_vitesse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_margin="25dp"
                android:layout_marginBottom="10dp"
                android:textSize="25sp"/>

            <TextView android:id="@+id/text_force"
                android:text="@string/stat_force"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:layout_margin="25dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textSize="25sp"/>

            <TextView android:id="@+id/text_precision"
                android:text="@string/stat_precision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_margin="25dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textSize="25sp"/>

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="end">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_keyboard_return"
                android:onClick="close_statistiques"
                android:contentDescription="@string/retour" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>